compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__access_int.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 410
expression: let x = 1 x.whatever
snapshot_kind: text
---
----- SOURCE CODE
let x = 1 x.whatever

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = 1 x.whatever
  │             ^^^^^^^^ This field does not exist

The value being accessed has this type:

    Int

It does not have any fields.
