compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__accessor_multiple_variants_multiple_positions.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 649
expression: "\npub type Person {\n    Teacher(name: String, title: String, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, title: String, age: Int)
    Student(name: String, age: Int)
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:7:41
  │
7 │ pub fn get_age(person: Person) { person.age }
  │                                         ^^^ Did you mean `name`?

The value being accessed has this type:

    Person

It has these accessible fields:

    .name

Note: The field you are trying to access is not defined consistently across
all variants of this custom type. To fix this, ensure that all variants
include the field with the same name, position, and type.
