compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__ambiguous_import_error_no_unqualified.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1796
expression: "\n        import wibble/sub\n        import wibble2/sub\n        pub fn main() {\n            sub.wobble()\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE
-- wibble/sub.gleam
pub fn wobble() { 1 }

-- wibble2/sub.gleam
pub fn wobble() { 1 }

-- main.gleam

        import wibble/sub
        import wibble2/sub
        pub fn main() {
            sub.wobble()
        }
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:3:9
  │
2 │         import wibble/sub
  │         ----------------- First imported here
3 │         import wibble2/sub
  │         ^^^^^^^^^^^^^^^^^^ Reimported here

`sub` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
