compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_bits_option_in_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 201
expression: "let x = <<<<1:1>>:bytes>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<<<1:1>>:bytes>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:19
  │
1 │ let x = <<<<1:1>>:bytes>> x
  │                   ^^^^^ This option is only allowed in BitArray patterns

Hint: This option has no effect in BitArray values.
See: https://tour.gleam.run/data-types/bit-arrays/
