compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_guard.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 45
expression: "case <<1>> { <<a:utf16_codepoint>> if a == \"test\" -> 1 _ -> 2 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<a:utf16_codepoint>> if a == "test" -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:39
  │
1 │ case <<1>> { <<a:utf16_codepoint>> if a == "test" -> 1 _ -> 2 }
  │                                       ^^^^^^^^^^^

Expected type:

    UtfCodepoint

Found type:

    String
