compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_conflicting_endianness1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 85
expression: "let x = <<1:big-little>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:big-little>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:17
  │
1 │ let x = <<1:big-little>> x
  │                 ^^^^^^ This is an extra endianness specifier

Hint: This segment already has an endianness of big.
See: https://tour.gleam.run/data-types/bit-arrays/
