compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_conflicting_endianness2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 90
expression: "case <<1>> { <<1:native-big>> -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<1:native-big>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:25
  │
1 │ case <<1>> { <<1:native-big>> -> 1 }
  │                         ^^^ This is an extra endianness specifier

Hint: This segment already has an endianness of native.
See: https://tour.gleam.run/data-types/bit-arrays/
